Table admin_reply_log {
  admin_id varchar(50) [not null]
  target_user_id varchar(50) [not null]
  created_by varchar(50) [not null]
  created_at datetime [not null, default: "now()"]
  message varchar(1000)
  reply_id int [pk, not null]
  target_id int [not null]
  target_type varchar(20) [not null]
}

Table allergy {
  allergy_id int [pk, not null]
  description varchar(200)
  name varchar(50) [not null]
}

Table category {
  category_id int [pk, not null]
  name varchar(50) [not null]
}

Table comment {
  comment_id int [pk, not null]
  content varchar(1000) [not null]
  created_at datetime [not null, default: "now()"]
  parent_id int
  post_id int [not null]
  qna_id int
  user_id varchar(50) [not null]
}

Table cooking_step {
  description varchar(1000) [not null]
  recipe_id int [not null]
  step_id int [pk, not null]
  step_order int [not null]
}

Table data_update_request {
  created_by varchar(50) [not null]
  admin_reply text
  created_at datetime [not null, default: "now()"]
  description text
  processed_at datetime
  request_id int [pk, not null]
  status varchar(20) [default: "PENDING"]
  title varchar(200) [not null]
  user_id varchar(50) [not null]
}

Table drink {
  abv int [not null]
  created_by varchar(50) [not null]
  description text
  drink_id int [pk, not null]
  drink_like_count int [not null, default: 0]
  image_url varchar(255)
  name varchar(100) [not null]
  price int [not null]
  seller_link varchar(255)
  type varchar(50) [not null]
}

Table drink_image {
  description varchar(300)
  drink_id int [not null]
  image_id int [pk, not null]
  image_url varchar(300) [not null]
}

Table drink_tag {
  drink_id int [pk, not null]
  tag_id int [pk, not null]
}

Table faq {
  answer varchar(1000)
  faq_id int [pk, not null]
  question varchar(500) [not null]
}

Table health_condition {
  condition_id int [pk, not null]
  description varchar(200)
  name varchar(50) [not null]
}

Table health_recommend {
  condition_id int [not null]
  reason varchar(300)
  recipe_id int [not null]
}

Table like_log {
  like_id int [pk, not null]
  target_id int [not null]
  target_type varchar(20) [not null]
  user_id varchar(50) [not null]
}

Table notice {
  content varchar(2000) [not null]
  created_at datetime [not null, default: "now()"]
  hit number [not null]
  notice_id int [pk, not null]
  title varchar(200) [not null]
}

Table pairing {
  drink_id int [not null]
  pairing_id int [pk, not null]
  reason varchar(300)
  recipe_id int [not null]
}

Table post {
  content text [not null]
  created_at datetime [not null, default: "now()"]
  post_id int [pk, not null]
  title varchar(200) [not null]
  type varchar(20) [not null]
  updated_at datetime
  post_category varchar(50) [not null, default: "자유게시판"]
  user_id varchar(50) [not null]
  view_count int [not null, default: 0
}

Table post_file {
  file_id  int [pk, not null]
  file_size int
  original_filename varchar(100) [not null]
  post_id  int [not null]
  stored_path varchar(200) [not null]
  updated_at datetime [not null, default: "now()"]
}

Table qna {
  answer varchar(1000)
  answered_at datetime
  content varchar(1000) [not null]
  created_at datetime [not null, default: "now()"]
  is_answered CHAR(1) [not null, default: 'N']
  qna_id int [pk, not null]
  title varchar(200) [not null]
  user_id varchar(50) [not null]
}

Table recipe {
  recipe_id number [pk, not null]
  name varchar(255) [not null]
  description varchar(255)
  image_url varchar(255)
  created_by varchar(255) [not null]
  created_at datetime [not null, default: "now()"]
  category_id int [not null] 
}

Table recipe_allergy {
  allergy_id int [not null]
  recipe_id int [not null]
}

Table recipe_ingredient {
  allergy_id int [not null]
  ingredient_name varchar(100) [not null]
  recipe_id int [not null]
  recipe_ingredient_id int [pk, not null]
}

Table recipe_search_log {
  keyword varchar(100) [not null]
  log_id int [pk, not null]
  searched_at datetime [not null]
  user_id varchar(50) [not null]
}

Table recipe_tag {
  recipe_id int [pk, not null]
  tag_id int [pk, not null]
}

Table report_post {
  checked_at datetime
  is_checked CHAR(1) [not null, default: 'N']
  post_id int [not null]
  reason varchar(500) [not null]
  report_id int [pk, not null]
  user_id varchar(50) [not null]
  reported_at datetime [not null, default: "now()"]
  reporter_id varchar(50) [not null]
}

Table report_user {
  checked_at datetime
  is_checked CHAR(1) [not null, default: 'N']
  reason varchar(500) [not null]
  report_id int [pk, not null]
  reported_at datetime [not null, default: "now()"]
  reported_user_id varchar(50) [not null]
  reporter_id varchar(50) [not null]
}

Table search_log {
  keyword varchar(200) [not null]
  log_id int [pk, not null]
  search_type varchar(50) [not null, default: 'recipe']
  searched_at datetime [not null, default: "now()"]
  user_id varchar(50) [not null]
}

Table tag {
  name varchar(50) [not null]
  tag_id int [pk, not null]
}

Table user {
  created_at datetime [not null, default: "now()"]
  email varchar(100) [not null]
  member_num int [pk, not null]
  nickname varchar(50) [not null]
  password varchar(100) [not null]
  provider varchar(20) [not null]
  role varchar(10) [not null, default: 'USER']
  status varchar(20) [not null, default: 'ACTIVE']
  user_id varchar(50) [not null]
  username varchar(50) [not null]
}

Table user_allergy {
  allergy_id int [not null]
  user_id varchar(50) [not null]
}

Table user_tag {
  tag_id int [pk, not null]
  user_id int [pk, not null]
  weight int(5,2) [default: 1.0]
}

Table visit_log {
  ip_address varchar(50) [not null]
  log_id int [pk, not null]
  page_url varchar(255) [not null]
  user_id varchar(50) [not null]
  visited_at datetime [not null]
}

Ref: admin_reply_log.admin_id > user.user_id
Ref: admin_reply_log.target_user_id > user.user_id
Ref: cooking_step.recipe_id > recipe.recipe_id
Ref: recipe.category_id > category.category_id
Ref: data_update_request.user_id > user.user_id
Ref: drink.created_by > user.user_id
Ref: drink_image.drink_id > drink.drink_id
Ref: drink_tag.drink_id > drink.drink_id
Ref: drink_tag.tag_id > tag.tag_id
Ref: health_recommend.condition_id > health_condition.condition_id
Ref: health_recommend.recipe_id > recipe.recipe_id
Ref: like_log.user_id > user.user_id
Ref: pairing.recipe_id > recipe.recipe_id
Ref: pairing.drink_id > drink.drink_id
Ref: post.user_id > user.user_id
Ref: post_file.post_id > post.post_id
Ref: qna.user_id > user.user_id
Ref: recipe.created_by > user.user_id
Ref: recipe_allergy.recipe_id > recipe.recipe_id
Ref: recipe_allergy.allergy_id > allergy.allergy_id
Ref: recipe_ingredient.recipe_id > recipe.recipe_id
Ref: recipe_ingredient.allergy_id > allergy.allergy_id
Ref: recipe_search_log.user_id > user.user_id
Ref: recipe_tag.recipe_id > recipe.recipe_id
Ref: recipe_tag.tag_id > tag.tag_id
Ref: report_post.post_id > post.post_id
Ref: report_post.user_id > user.user_id
Ref: report_post.reporter_id > user.user_id
Ref: report_user.reported_user_id > user.user_id
Ref: report_user.reporter_id > user.user_id
Ref: search_log.user_id > user.user_id
Ref: user_allergy.user_id > user.user_id
Ref: user_allergy.allergy_id > allergy.allergy_id
Ref: user_tag.user_id > user.user_id
Ref: user_tag.tag_id > tag.tag_id
Ref: visit_log.user_id > user.user_id
Ref: comment.post_id > post.post_id
Ref: comment.qna_id > qna.qna_id
Ref: comment.user_id > user.user_id